Set core layout using flex

--- a/style.css
+++ b/style.css
@@ -26,4 +26,31 @@ html{
 }
 body{
     font-size: 1.5rem;
+    width: 100%;
+    min-width: 100%;
+    height: 100vh;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.rating{
+    display: flex;
+    align-items: center;
+}
+.cards{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.card-header{
+    display: flex;
+    align-items: center;
 }
