--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'League Spartan', sans-serif;
 }
 html{
     font-size: 10px;
@@ -30,27 +31,103 @@ body{
     min-width: 100%;
     height: 100vh;
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    padding: 15rem 30rem 0 30rem;
 }
 
 .header{
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+.header-main{
+    margin-right: 40rem;
+}
+.header h1{
+    font-size: 6.4rem;
+    color: var(--Very-Dark-Magenta);
+}
+.header p {
+    font-size: 2rem;
+    color: var(--Dark-Grayish-Magenta);
+    line-height: 1.5;
+    margin-top: 2rem;
+}
+.header-ratings{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+.header-ratings .far-left{
+    translate: -10rem 0;
+}
+.header-ratings .left{
+    translate: -5rem 0;
 }
 .rating{
     display: flex;
     align-items: center;
 }
-.cards{
+.rating{
+    width: 45rem;
+    background: hsla(303, 10%, 53%, 0.1);
+    padding: 2rem 0 2rem 3.5rem;
+    border-radius: 1rem;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    gap: 3rem;
+}
+.rating span{
+    font-weight: var(--bold);
+    color: var(--Very-Dark-Magenta);
+    font-size: 1.7rem;
+}
+.rating .stars{
+    display: flex;
+    flex-wrap: nowrap;
+    gap: .7rem;
+}
+.stars img {
+    width: 1.8rem;
+}
+.cards{
+    margin-top: 7rem;
+    display: flex;
+    justify-content: space-between;
+    gap: 4rem;
+}
+.card{
+    background: var(--Very-Dark-Magenta);
+    border-radius: 1rem;
+    padding: 4rem 2.6rem;
 }
 .card-header{
     display: flex;
     align-items: center;
+}
+.card-header img{
+    border-radius: 50%;
+    width: 4rem;
+}
+.card-info {
+    color: var(--Soft-Pink);
+    font-size: 1.7rem;
+    margin-left: 2rem;
+}
+.card-info .name{
+    color: var(--White);
+    font-weight: var(--bold);
+    margin-bottom: .5rem;
+}
+.card-quote{
+    color: var(--White);
+    font-size: 1.7rem;
+    line-height: 1.4;
+    font-weight: var(--medium);
+    margin: 3rem 5rem 0 0;
+}
+.down{
+    translate: 0 2rem;
+}
+.far-down{
+    translate: 0 4rem;
 }
