--- a/style.css
+++ b/style.css
@@ -31,11 +31,17 @@ body{
     min-width: 100%;
     height: 100vh;
     min-height: 100vh;
-    padding: 15rem 30rem 0 30rem;
+    padding-top: 15rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 }
 
+.header, .cards{
+    width: 70%;
+}
 .header{
-    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -130,4 +136,42 @@ body{
 }
 .far-down{
     translate: 0 4rem;
+}
+
+@media screen and (max-width: 768px) {
+    body{
+        padding: 4rem 2rem 0;
+    }
+    .header, .cards{
+        width: 100%;
+    }
+    .header{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .header-main{
+        margin: 0;
+        text-align: center;
+    }
+    .header-main h1{
+        font-size: 4.2rem;
+    }
+    .header-main p{
+        margin-inline: 2rem;
+        font-size: 1.6rem;
+    }
+    .header-ratings {
+        margin-top: 2rem;
+        width: 100%;
+    }
+    .rating{
+        padding: 1.5rem 2rem;
+        translate: unset !important;
+        width: 100%;
+        flex-direction: column;
+        gap: 1.5rem;
+    }
+    .cards{
+        flex-direction: column;
+    }
 }
